opam-version: "1.2"
name: "node-shim"
version: "0.0.6"
maintainer: "Santeri Hiltunen <accounts.github@me.hilzu.moe>"
authors: "Santeri Hiltunen <accounts.github@me.hilzu.moe>"
homepage: "https://github.com/Hilzu/node-shim"
bug-reports: "https://github.com/Hilzu/node-shim/issues"
license: "GPL-3.0+"
dev-repo: "https://github.com/Hilzu/node-shim.git"
build: [["jbuilder" "build" "-p" name "-j" jobs]]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
available: [ (os = "darwin" | os = "linux") & ocaml-version = "4.06.1" ]
depends: [
  "lwt"
  "yojson"
  "ounit" {test}
  "jbuilder" {build}
]
