opam-version: "2.0"
name: "node-shim"
version: "0.1.0"
maintainer: "Santeri Hiltunen <accounts.github@me.hilzu.moe>"
authors: "Santeri Hiltunen <accounts.github@me.hilzu.moe>"
homepage: "https://github.com/Hilzu/node-shim"
bug-reports: "https://github.com/Hilzu/node-shim/issues"
license: "GPL-3.0+"
dev-repo: "git+https://github.com/Hilzu/node-shim.git"
build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]
run-test: [
  [ "dune" "runtest" "-p" name "-j" jobs ]
]
available: [ os = "macos" | os = "linux" ]
depends: [
  "ocaml" {>= "4.07.0"}
  "lwt"
  "yojson"
  "ounit" {with-test}
  "dune" {build}
]
