opam-version: "2.0"
name: "node-shim"
version: "0.2.1"
synopsis: "Shim node, npm and yarn executables and use the correct version according to package.json engines"
maintainer: "Santeri Hiltunen <accounts.github@me.hilzu.moe>"
authors: "Santeri Hiltunen <accounts.github@me.hilzu.moe>"
homepage: "https://github.com/Hilzu/node-shim"
bug-reports: "https://github.com/Hilzu/node-shim/issues"
license: "GPL-3.0+"
dev-repo: "git+https://github.com/Hilzu/node-shim.git"
build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]
run-test: [
  [ "dune" "runtest" "-p" name "-j" jobs ]
]
available: [ os = "macos" | os = "linux" ]
depends: [
  "ocaml" {>= "4.07.0"}
  "lwt" {>= "1.5.0"}
  "yojson" {>= "1.5.0"}
  "ounit" {with-test >= "2.0.0"}
  "dune" {build and >= "1.6.0"}
  "ocamlformat" {dev}
  "merlin" {dev}
]
